// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker matches the snapshot when the is12hour prop is false 1`] = `
<div
  className="components-datetime__time"
>
  <fieldset>
    <legend
      className="components-datetime__time-legend invisible"
    >
      Date
    </legend>
    <div
      className="components-datetime__time-wrapper"
    >
      <div
        className="components-datetime__time-field components-datetime__time-field-month"
        key="render-month"
      >
        <select
          aria-label="Month"
          className="components-datetime__time-field-month-select"
          onBlur={[Function]}
          onChange={[Function]}
          value="10"
        >
          <option
            value="01"
          >
            January
          </option>
          <option
            value="02"
          >
            February
          </option>
          <option
            value="03"
          >
            March
          </option>
          <option
            value="04"
          >
            April
          </option>
          <option
            value="05"
          >
            May
          </option>
          <option
            value="06"
          >
            June
          </option>
          <option
            value="07"
          >
            July
          </option>
          <option
            value="08"
          >
            August
          </option>
          <option
            value="09"
          >
            September
          </option>
          <option
            value="10"
          >
            October
          </option>
          <option
            value="11"
          >
            November
          </option>
          <option
            value="12"
          >
            December
          </option>
        </select>
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-day"
        key="render-day"
      >
        <input
          aria-label="Day"
          className="components-datetime__time-field-day-input"
          min={1}
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="18"
        />
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-year"
      >
        <input
          aria-label="Year"
          className="components-datetime__time-field-year-input"
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="1986"
        />
      </div>
    </div>
  </fieldset>
  <fieldset>
    <legend
      className="components-datetime__time-legend invisible"
    >
      Time
    </legend>
    <div
      className="components-datetime__time-wrapper"
    >
      <div
        className="components-datetime__time-field components-datetime__time-field-time"
      >
        <input
          aria-label="Hours"
          className="components-datetime__time-field-hours-input"
          max={23}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="23"
        />
        <span
          aria-hidden="true"
          className="components-datetime__time-separator"
        >
          :
        </span>
        <input
          aria-label="Minutes"
          className="components-datetime__time-field-minutes-input"
          max={59}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          type="number"
          value="00"
        />
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`TimePicker matches the snapshot when the is12hour prop is specified 1`] = `
<div
  className="components-datetime__time"
>
  <fieldset>
    <legend
      className="components-datetime__time-legend invisible"
    >
      Date
    </legend>
    <div
      className="components-datetime__time-wrapper"
    >
      <div
        className="components-datetime__time-field components-datetime__time-field-day"
        key="render-day"
      >
        <input
          aria-label="Day"
          className="components-datetime__time-field-day-input"
          min={1}
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="18"
        />
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-month"
        key="render-month"
      >
        <select
          aria-label="Month"
          className="components-datetime__time-field-month-select"
          onBlur={[Function]}
          onChange={[Function]}
          value="10"
        >
          <option
            value="01"
          >
            January
          </option>
          <option
            value="02"
          >
            February
          </option>
          <option
            value="03"
          >
            March
          </option>
          <option
            value="04"
          >
            April
          </option>
          <option
            value="05"
          >
            May
          </option>
          <option
            value="06"
          >
            June
          </option>
          <option
            value="07"
          >
            July
          </option>
          <option
            value="08"
          >
            August
          </option>
          <option
            value="09"
          >
            September
          </option>
          <option
            value="10"
          >
            October
          </option>
          <option
            value="11"
          >
            November
          </option>
          <option
            value="12"
          >
            December
          </option>
        </select>
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-year"
      >
        <input
          aria-label="Year"
          className="components-datetime__time-field-year-input"
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="1986"
        />
      </div>
    </div>
  </fieldset>
  <fieldset>
    <legend
      className="components-datetime__time-legend invisible"
    >
      Time
    </legend>
    <div
      className="components-datetime__time-wrapper"
    >
      <div
        className="components-datetime__time-field components-datetime__time-field-time"
      >
        <input
          aria-label="Hours"
          className="components-datetime__time-field-hours-input"
          max={12}
          min={1}
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="11"
        />
        <span
          aria-hidden="true"
          className="components-datetime__time-separator"
        >
          :
        </span>
        <input
          aria-label="Minutes"
          className="components-datetime__time-field-minutes-input"
          max={59}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          type="number"
          value="00"
        />
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-am-pm"
      >
        <ForwardRef(Button)
          className="components-datetime__time-am-button"
          isPressed={false}
          isSecondary={true}
          onClick={[Function]}
        >
          AM
        </ForwardRef(Button)>
        <ForwardRef(Button)
          className="components-datetime__time-pm-button"
          isPressed={true}
          isSecondary={true}
          onClick={[Function]}
        >
          PM
        </ForwardRef(Button)>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`TimePicker matches the snapshot when the is12hour prop is true 1`] = `
<div
  className="components-datetime__time"
>
  <fieldset>
    <legend
      className="components-datetime__time-legend invisible"
    >
      Date
    </legend>
    <div
      className="components-datetime__time-wrapper"
    >
      <div
        className="components-datetime__time-field components-datetime__time-field-day"
        key="render-day"
      >
        <input
          aria-label="Day"
          className="components-datetime__time-field-day-input"
          min={1}
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="18"
        />
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-month"
        key="render-month"
      >
        <select
          aria-label="Month"
          className="components-datetime__time-field-month-select"
          onBlur={[Function]}
          onChange={[Function]}
          value="10"
        >
          <option
            value="01"
          >
            January
          </option>
          <option
            value="02"
          >
            February
          </option>
          <option
            value="03"
          >
            March
          </option>
          <option
            value="04"
          >
            April
          </option>
          <option
            value="05"
          >
            May
          </option>
          <option
            value="06"
          >
            June
          </option>
          <option
            value="07"
          >
            July
          </option>
          <option
            value="08"
          >
            August
          </option>
          <option
            value="09"
          >
            September
          </option>
          <option
            value="10"
          >
            October
          </option>
          <option
            value="11"
          >
            November
          </option>
          <option
            value="12"
          >
            December
          </option>
        </select>
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-year"
      >
        <input
          aria-label="Year"
          className="components-datetime__time-field-year-input"
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="1986"
        />
      </div>
    </div>
  </fieldset>
  <fieldset>
    <legend
      className="components-datetime__time-legend invisible"
    >
      Time
    </legend>
    <div
      className="components-datetime__time-wrapper"
    >
      <div
        className="components-datetime__time-field components-datetime__time-field-time"
      >
        <input
          aria-label="Hours"
          className="components-datetime__time-field-hours-input"
          max={12}
          min={1}
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="11"
        />
        <span
          aria-hidden="true"
          className="components-datetime__time-separator"
        >
          :
        </span>
        <input
          aria-label="Minutes"
          className="components-datetime__time-field-minutes-input"
          max={59}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          type="number"
          value="00"
        />
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-am-pm"
      >
        <ForwardRef(Button)
          className="components-datetime__time-am-button"
          isPressed={false}
          isSecondary={true}
          onClick={[Function]}
        >
          AM
        </ForwardRef(Button)>
        <ForwardRef(Button)
          className="components-datetime__time-pm-button"
          isPressed={true}
          isSecondary={true}
          onClick={[Function]}
        >
          PM
        </ForwardRef(Button)>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`TimePicker matches the snapshot when the is12hour prop is undefined 1`] = `
<div
  className="components-datetime__time"
>
  <fieldset>
    <legend
      className="components-datetime__time-legend invisible"
    >
      Date
    </legend>
    <div
      className="components-datetime__time-wrapper"
    >
      <div
        className="components-datetime__time-field components-datetime__time-field-month"
        key="render-month"
      >
        <select
          aria-label="Month"
          className="components-datetime__time-field-month-select"
          onBlur={[Function]}
          onChange={[Function]}
          value="10"
        >
          <option
            value="01"
          >
            January
          </option>
          <option
            value="02"
          >
            February
          </option>
          <option
            value="03"
          >
            March
          </option>
          <option
            value="04"
          >
            April
          </option>
          <option
            value="05"
          >
            May
          </option>
          <option
            value="06"
          >
            June
          </option>
          <option
            value="07"
          >
            July
          </option>
          <option
            value="08"
          >
            August
          </option>
          <option
            value="09"
          >
            September
          </option>
          <option
            value="10"
          >
            October
          </option>
          <option
            value="11"
          >
            November
          </option>
          <option
            value="12"
          >
            December
          </option>
        </select>
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-day"
        key="render-day"
      >
        <input
          aria-label="Day"
          className="components-datetime__time-field-day-input"
          min={1}
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="18"
        />
      </div>
      <div
        className="components-datetime__time-field components-datetime__time-field-year"
      >
        <input
          aria-label="Year"
          className="components-datetime__time-field-year-input"
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="1986"
        />
      </div>
    </div>
  </fieldset>
  <fieldset>
    <legend
      className="components-datetime__time-legend invisible"
    >
      Time
    </legend>
    <div
      className="components-datetime__time-wrapper"
    >
      <div
        className="components-datetime__time-field components-datetime__time-field-time"
      >
        <input
          aria-label="Hours"
          className="components-datetime__time-field-hours-input"
          max={23}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          step={1}
          type="number"
          value="23"
        />
        <span
          aria-hidden="true"
          className="components-datetime__time-separator"
        >
          :
        </span>
        <input
          aria-label="Minutes"
          className="components-datetime__time-field-minutes-input"
          max={59}
          min={0}
          onBlur={[Function]}
          onChange={[Function]}
          type="number"
          value="00"
        />
      </div>
    </div>
  </fieldset>
</div>
`;
